--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.1",
     "jquery": "^3.7.0",
+    "tw-elements": "^1.0.0-beta3",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   },
