--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.3.0",
     "@popperjs/core": "^2.11.8",
+    "@rails/actioncable": "^7.0.8",
     "bootstrap": "^5.3.1",
     "jquery": "^3.7.0",
     "tw-elements": "^1.0.0-beta3",
